--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     color:var(--branco);
 }
 header .principal{
-    border: 1px solid rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
     display:flex;
     flex-direction: row;
     align-items: center;
@@ -23,32 +23,58 @@ header .principal{
 }
 header .logo{
     color: var(--vermelho);
-    font-size:40px;
+    font-size:60px;
     margin-left:5px;
 }
 
 header nav a{
     text-decoration: none;
-    color: var(--branco);
+    color: white;
     margin-right: 20px;
 }
 header nav a:hover{
-    color: rgb(162, 162, 162);
+    color: rgb(186, 186, 186);
     
 }
 .anime-principal{
-    font-size: 16;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url(/imgs/naruto.jpg) ;
-    height:500px;
+    font-size:16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url(/imgs/naruto.jpg);
+    height:330px;
+    width:100%;
     background-size: cover;
+    background-repeat:no-repeat;
     display:flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    overflow: auto;
 }
 .anime-principal .descricao{
-    margin-bottom:100px;
+    margin-bottom:80px;
 }
 .titulo{
-    font-size:60px;
+    margin-top: 15%;
+    font-size:50px;
+    font-family:'Trebuchet MS', Arial, sans-serif;
+}
+.botao{
+    background-color: rgba(0,0,0,.50);
+    color:white;
+    border:none;
+    padding:15px 30px;
+    cursor: pointer;
+    margin-right: 15px;
+    font-size:12px;
+    transition: .4s ease all;
+}
+.botao:hover{
+    background-color: white;
+    color:black;
+}
+.botao i{
+    margin-right: 5px;
+}
+
+.anime-principal .container{
+    width: 40%;
 }
