--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header nav a{
     text-decoration: none;
     color: white;
     margin-right: 20px;
+    font-size: 20px;
 }
 header nav a:hover{
     color: rgb(186, 186, 186);
@@ -39,42 +40,51 @@ header nav a:hover{
 .anime-principal{
     font-size:16px;
     background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url(/imgs/naruto.jpg);
-    height:330px;
-    width:100%;
+    height:650px;
     background-size: cover;
-    background-repeat:no-repeat;
     display:flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    overflow: auto;
+
 }
 .anime-principal .descricao{
-    margin-bottom:80px;
+    margin-bottom:5%;
+    margin-left:30px;
 }
 .titulo{
-    margin-top: 15%;
-    font-size:50px;
+    margin-bottom: 3%;
     font-family:'Trebuchet MS', Arial, sans-serif;
+}
+.titulo img{
+    height:100px;
+    width:350px;
+    margin-left: 30px;
 }
 .botao{
     background-color: rgba(0,0,0,.50);
     color:white;
     border:none;
-    padding:15px 30px;
+    padding:16px 32px;
     cursor: pointer;
-    margin-right: 15px;
     font-size:12px;
     transition: .4s ease all;
+    margin-left:30px;
+
 }
 .botao:hover{
     background-color: white;
     color:black;
 }
 .botao i{
-    margin-right: 5px;
+    margin-right: 4px;
 }
-
-.anime-principal .container{
-    width: 40%;
+.box-anime{
+    height:100%;
+    width:100%;
+    display:block;
+    cursor: pointer;
+}
+.assistidos{
+    margin-left: 10px;
 }
