--- a/desenho/desenho.css
+++ b/desenho/desenho.css
@@ -45,3 +45,22 @@ header nav a:hover{
     justify-content: center;
     flex-direction: column;
 }
+.botao{
+    background-color: rgba(0,0,0,.50);
+    color:white;
+    border:none;
+    padding:18px 36px;
+    cursor: pointer;
+    height:80px;
+    font-size:18px;
+    transition: .4s ease all;
+    margin-left:30px;
+
+}
+.botao:hover{
+    background-color: white;
+    color:black;
+}
+.titulo img{
+    margin-left:30px;
+}
